[gd_scene load_steps=2 format=3 uid="uid://bn5mjgjokhnao"]

[ext_resource type="Script" path="res://hud.gd" id="1_0008m"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0008m")

[node name="StartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -15.5
offset_right = 23.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Start"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 24.0
offset_right = 23.0
offset_bottom = 72.0
grow_horizontal = 2
color = Color(1, 0, 1, 1)

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(576, 48)

[node name="ItemSprite" type="Sprite2D" parent="Inventory"]
position = Vector2(6.10352e-05, 0)
scale = Vector2(0.189453, 0.189453)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
